app-argocd/nginx-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-another-nodeports
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30088
  selector:
    app: nginx-another
  type: NodePort
